# Surprize_v4.0

./: .gitignore  README_DEV.md  Surprize.spec  pyproject.toml  requirements.txt
RPI5_code/: RTSP_SERVER.md  video_rtsp_server.py
app/: __init__.py  main.py
docs/: AI_RULES.md  ARCH.md  ARCH_ACCEPTANCE_TEMPLATE.md  ARCH_ORCHESTRATOR_3_STAGE_v1.md  ARCH_TEST_SESSION_SYNC_v1.md  ARCH_UI_RTSP_MONITOR_v1.md  CONTRACTS.md  DECISIONS.md  DEV_REPORT_TEMPLATE.md  DEV_REPORT_mayak_spindle_v1.md  INDEX.md  LOG_CODES.md  ROADMAP.md  RUNBOOK.md  SCENARIOS_v0.md  SCENARIO_E2E_v1.md  SERVICES.md  SERVICES_PATCH_mayak_spindle.md  SERVICE_TEMPLATE_v4.md  UI_GUIDE.md  UI_MONITORING_TRAJECTORY_PLAN_v1.md  UI_PREPARE_TEST_BUTTON_v1.md  VISION.md
hooks/: hook-OpenGL.py  hook-pyqtgraph.py
majak_sim/: __main__.py  emulator.py
model_ballistics/: ReadMe.md  aerodynamics.py  atmosphere_isa.py  diagnostics.py  ii_contract.md  impact_event.py  integrator_euler.py  lift_geometry.py  orientation_kinematics.py  rotational_dynamics.py  run_vkr.py  selfcheck.py  trajectory.py  translational_dynamics.py  visualization.py  vkr_core.py
tests/: test_event_bus.py  test_gps_sdr_sim_pipeline.py  test_mayak_spindle_service.py  test_mayak_spindle_smoke.py  test_mayak_udp_transport.py  test_monitoring_ui_smoke.py  test_orchestrator_3_stage_phase.py  test_orchestrator_mayak_commands.py  test_orchestrator_overrides.py  test_orchestrator_v1.py  test_orchestrator_v4_roles.py  test_profiles_loader.py  test_replay_state_contract.py  test_rtsp_health_v1.py  test_rtsp_ingest_v1.py  test_session_gps_tx_runner.py  (+5 more)
(+68 files in other folders)
